# localstack-python-utils

./: .gitignore  Makefile  README.md  localstack.py  nosetests.xml  requirements.txt  setug.cfg  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
localstack_docker/: container.py  localstack_logger.py
localstack_utils/: container.py  localstack.py  localstack_docker_configuration.py  localstack_logger.py  localstack_utils.py
tests/: kinesis_test.py  test_kinesis.py
