[metadata]
name = localstack-utils
description = Utils for testing with LocalStack
version = attr: localstack_utils.__version__
author = Cristopher Pinzon
author_email = cristopher.pinzon@localstack.cloud
url = https://github.com/localstack/localstack-python-utils
summary = LocalStack Utils for testing
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
url = https://github.com/localstack/localstack-obfuscator
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
install_requires =
    docker>=6.1.1
    nose>=1.3.7
    nose-timer>=0.7.5
test_requires =
    pytest>=7.4.0
    boto3>=1.26.121

[options.extras_require]
dev =
    boto3>=1.26.121
    pytest>=7.4.0
    black==23.10.0
    ruff==0.1.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
exclude =
    tests
    tests.*
